<resources>
    <string name="app_name">festiv</string>
    <string name="get_started">Get Started</string>
    <string name="festiv">FESTIV</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="you_don_t_have_an_account">you don’t have an account ?</string>
    <string name="create_one">Create one !</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="profile">Profile</string>
    <string name="saved">Saved</string>
    <string name="home">Home</string>
    <string name="date">Date</string>
    <string name="reserve_ticket" >Reserve ticket</string>
    <string name="festival_image">festival image</string>
    <string name="view_details">View Details</string>
    <string name="your_gateway_to_unforgettable_events">Your gateway to unforgettable events</string>
    <string name="log_in">log in</string>
    <string name="reserve">Reserve</string>
    <string name="total">Total</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="normal">Normal</string>
    <string name="reservation">Reservation</string>
    <string name="reserve_a_ticket">Reserve a ticket</string>
    <string name="nombre_de_place">nombre de place:</string>
    <string name="entrez_le_nombre_de_places">Entrez le nombre de places</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="create_an_account">Create an Account</string>
    <string name="no_description_available">no description available</string>
    <string name="login_required">login required</string>
    <string name="profile_login_prompt">profile login prompt</string>
    <string name="login">login</string>
    <string name="cancel">cancel</string>
    <string name="saved_items_login_prompt">saved items</string>
    <string name="event_image">event image</string>
    <string name="already_have_an_account">already have an account log in</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">select date</string>
    <string name="removed_from_saved">Removed from saved: %s</string>
    <string name="failed_to_remove">Failed to remove: %s</string>
    <string name="no_saved_spectacles">No saved spectacles found</string>
    <string name="switch_to_english">Switched to English</string>
    <string name="switch_to_french">Switched to French</string>
    <string name="bookmark_login_prompt">bookmark login prompt\n</string>
    <string name="bookmark_button">bookmark button\n</string>
    <string name="removing_from_bookmarks">removing from bookmarked\n</string>
    <string name="reservation_number">reservation number #%d</string>
    <string name="discover_plan_and_attend_amazing_events_in_your_city" />
    <string name="already_have_account">already have account</string>
    <string name="festiv_logo">festiv logo</string>
    <string name="decorative_pattern">decorative pattern</string>
</resources>